--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
     "chart.js": "^4.4.3",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
     "@types/node": "^20",
