--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@auth0/nextjs-auth0": "^3.5.0",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "chart.js": "^4.4.3",
     "next": "14.2.3",
